# find-window

./: CMakeLists.txt  README.md  find-sprtf.cpp  find-sprtf.h  find-utils.cpp  find-window.cpp  temp.cxx  temp.hxx
GUI/: ReadMe.txt  find_ABT.cpp  find_ABT.h  find_CMD.cpp  find_CMD.h  find_EnumP.cpp  find_EnumP.h  find_EnumW.cpp  find_EnumW.h  find_INI.cpp  find_INI.h  find_Input.cpp  find_Input.h  find_Menu.cpp  find_Menu.h  find_Paint.cpp  find_Paint.h  find_Scroll.cpp  find_Scroll.h  find_Sprtf.cpp  find_Sprtf.h  find_Timer.cpp  find_Timer.h  find_Utils.cpp  find_Utils.h  find_VER.h  find_window.aps  find_window.cpp  find_window.h  find_window.rc  resource.h  targetver.h
build.32/: build-me.bat
build.x64/: .gitignore  build-me.bat
src/: find-sprtf.cpp  find-sprtf.h  find-utils.cpp  find-utils.h  find-window.cpp  find-window.h
